# portfolio-copilot

./: .gitignore  start_agent.bat
copilot-agent/: agent.py  main.py  pyproject.toml  streamlit.py  test_agent.py
customer-portfolio-agent/: a2a_server.py  agent.py  dummy_data.py  pyproject.toml  requirements.txt  test_a2a_server.py
mcp-portfolio-analytics/: README.md  main.py  manifest.json  pyproject.toml  server.py
portfolio-analytics-agent/: a2a_server.py  agent.py  agent_executor.py  main.py  mcp_portfolio_analytics.py  pyproject.toml  test_a2a_server.py
risk-calculation-agent/: a2a_server.py  agent.py  agent_executor.py  main.py  mcp_risk_calculation.py  pyproject.toml  streamlit_app.py  test_a2a_server.py
