[project]
name = "copilot-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a>=0.44",
    "a2a-sdk>=0.2.10",
    "asyncio>=3.4.3",
    "dotenv>=0.9.9",
    "langchain-google-genai>=2.1.6",
    "langgraph>=0.5.0",
    "streamlit>=1.46.1",
]
