[project]
name = "portfolio-analytics-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=0.2.9",
    "fastmcp>=2.9.0",
    "google-adk==1.5.0",
    "langfuse>=3.1.3",
    "nest-asyncio>=1.6.0",
    "yfinance>=0.2.63",
]
