[project]
name = "risk-calculation-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=0.2.9",
    "fastmcp>=2.9.0",
    "langchain>=0.3.26",
    "langchain-google-genai>=2.1.5",
    "langchain-mcp-adapters>=0.1.7",
    "langgraph>=0.4.9",
    "scipy>=1.16.0",
    "streamlit>=1.46.1",
    "yfinance>=0.2.63",
]
